--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.0.0",
-    "react-native": "0.51.0"
+    "react-native": "0.51.0",
+    "react-native-mail": "^3.0.5"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
