--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.0.0",
     "react-native": "0.51.0",
     "react-native-mail": "^3.0.5",
+    "react-native-simple-store": "^1.3.0",
     "react-navigation": "^1.0.0-beta.21"
   },
   "devDependencies": {
