--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "0.51.0",
     "react-native-mail": "^3.0.5",
     "react-native-simple-store": "^1.3.0",
+    "react-native-store": "^0.4.1",
     "react-navigation": "^1.0.0-beta.21"
   },
   "devDependencies": {
